// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`availability-widget-filters Renders \`availability-widget-filters\` with custom props 1`] = `
<div
  class="layout availability-widget-filters gap-6 align-end wrap"
>
  <c-advanced-search-field-stub
    class="pa-0 availability-widget-filters__search"
    query="[object Object]"
    tooltip="<span>Help on the advanced research :</span>
<p>- [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt;</p> [ AND|OR [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt; ]
<p>The \\"-\\" before the research is required</p>
<p>Operators :
    <=, <,=, !=,>=, >, LIKE (For MongoDB regular expression)</p>
<p>Value's type : String between quote, Boolean (\\"TRUE\\", \\"FALSE\\"), Integer, Float, \\"NULL\\"</p>
<dl><dt>Examples :</dt><dt>- Name = \\"name_1\\"</dt>
    <dd>Entities whose names are \\"name_1\\"</dd><dt>- Name=\\"name_1\\" AND Type=\\"service\\"</dt>
    <dd>Entities whose names is \\"name_1\\" and the types is \\"service\\"</dd><dt>- infos.custom.value=\\"Custom value\\" OR Type=\\"resource\\"</dt>
    <dd>Entities whose infos.custom.value is \\"Custom value\\" or the type is \\"resource\\"</dd><dt>- infos.custom.value LIKE 1 OR infos.custom.value LIKE 2</dt>
    <dd>Entities whose infos.custom.value contains 1 or 2</dd><dt>- NOT Name = \\"name_1\\"</dt>
    <dd>Entities whose name isn't \\"name_1\\"</dd>
</dl>"
  />
  <c-quick-date-interval-field-stub
    allow-future=""
    class="availability-widget-filters__interval"
    interval="[object Object]"
    quick-ranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    short=""
    with-hours=""
  />
  <div
    class="layout availability-widget-filters__filter-wrapper align-end"
  >
    <filter-selector-stub
      class="availability-widget-filters__filter-selector mr-4"
      clearable="true"
      disabled="true"
      filters="[object Object]"
      hidedetails="true"
      itemtext="title"
      itemvalue="_id"
      label="Select a filter"
      lockedfilters="[object Object],[object Object]"
      lockedvalue="locked-filter"
      value="test-filter"
    />
    <filters-list-btn-stub
      addable="true"
      editable="true"
      private="true"
      widgetid="widget-id"
      withentity="true"
    />
  </div>
  <availability-display-parameter-field-stub
    class="availability-widget-filters__parameter"
    label="Value"
    name="parameter"
    value="1"
  />
  <availability-show-type-field-stub
    class="availability-widget-filters__show-type"
    label="Show"
    name="availability"
    value="0"
  />
  <c-enabled-field-stub
    hide-details=""
    label="Show trend"
    value="true"
  />
  <availability-value-filter-field-stub
    class="availability-widget-filters__value-filter"
    maxseconds="123"
    showtype="0"
    value="[object Object]"
  />
  <c-action-btn-stub
    icon="cloud_download"
    loading="true"
    tooltip="Export widget as csv file"
  />
</div>
`;

exports[`availability-widget-filters Renders \`availability-widget-filters\` with default props 1`] = `
<div
  class="layout availability-widget-filters gap-6 align-end wrap"
>
  <c-advanced-search-field-stub
    class="pa-0 availability-widget-filters__search"
    query="[object Object]"
    tooltip="<span>Help on the advanced research :</span>
<p>- [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt;</p> [ AND|OR [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt; ]
<p>The \\"-\\" before the research is required</p>
<p>Operators :
    <=, <,=, !=,>=, >, LIKE (For MongoDB regular expression)</p>
<p>Value's type : String between quote, Boolean (\\"TRUE\\", \\"FALSE\\"), Integer, Float, \\"NULL\\"</p>
<dl><dt>Examples :</dt><dt>- Name = \\"name_1\\"</dt>
    <dd>Entities whose names are \\"name_1\\"</dd><dt>- Name=\\"name_1\\" AND Type=\\"service\\"</dt>
    <dd>Entities whose names is \\"name_1\\" and the types is \\"service\\"</dd><dt>- infos.custom.value=\\"Custom value\\" OR Type=\\"resource\\"</dt>
    <dd>Entities whose infos.custom.value is \\"Custom value\\" or the type is \\"resource\\"</dd><dt>- infos.custom.value LIKE 1 OR infos.custom.value LIKE 2</dt>
    <dd>Entities whose infos.custom.value contains 1 or 2</dd><dt>- NOT Name = \\"name_1\\"</dt>
    <dd>Entities whose name isn't \\"name_1\\"</dd>
</dl>"
  />
  <!---->
  <!---->
  <availability-display-parameter-field-stub
    class="availability-widget-filters__parameter"
    label="Value"
    name="parameter"
    value="0"
  />
  <availability-show-type-field-stub
    class="availability-widget-filters__show-type"
    label="Show"
    name="availability"
    value="0"
  />
  <c-enabled-field-stub
    hide-details=""
    label="Show trend"
  />
  <availability-value-filter-field-stub
    class="availability-widget-filters__value-filter"
    showtype="0"
  />
  <!---->
</div>
`;
